--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="global.healthx.traciex"
+    package="global.healthx.traciexapp"
     xmlns:tools="http://schemas.android.com/tools"
     tools:replace="allowBackup"
     android:allowBackup="false">
