--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_spinkit: ^5.0.0
   time_range: ^1.0.0
   date_picker_timeline: ^1.2.3
+  jwt_decoder: ^2.0.1
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
